--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="ch.blinkenlights.android.apnswitch"
-      android:versionCode="1"
+      android:versionCode="2"
       android:versionName="1.0">
+<uses-sdk android:minSdkVersion="4" />
     <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
     <receiver android:name="ApnSwitch" 
