--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,12 @@
       package="ch.blinkenlights.android.apnswitch"
       android:versionCode="3"
       android:versionName="1.0">
-<uses-sdk android:minSdkVersion="4" />
+
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="10" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    
+
     <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
     <receiver android:name="ApnSwitch" 
